force-app/main/default/objects/Helper__c/fields/ResultBody_11__c.field-meta.xml
<CustomField>
    <fullName>ResultBody_11__c</fullName>
    <label>ResultBody_11</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>