force-app/main/default/objects/Helper__c/fields/ResultBody_12__c.field-meta.xml
<CustomField>
    <fullName>ResultBody_12__c</fullName>
    <label>ResultBody_12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>